<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/skinsis"/>

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/reset_password"
        android:textSize="36dp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/ForgotPasswordPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/instruksi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/fpEmailTextInput"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:layout_marginTop="100dp"
        android:ems="10"
        android:background="@drawable/forget"
        android:backgroundTint="@color/abubg"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="Submit" />

</LinearLayout>