<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
<<<<<<< Updated upstream
    android:layout_height="wrap_content"
=======
    android:layout_height="match_parent"
    android:background="@color/white"
>>>>>>> Stashed changes
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_home_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View
                    android:id="@+id/_bg__home_ek2"
                    android:layout_width="450dp"
                    android:layout_height="800dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:foreground="@drawable/_34185a6f9905e8b0b5b85b5efa284c88_2" />

                <View
                    android:id="@+id/email_ek4"
                    android:layout_width="311dp"
                    android:layout_height="121dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="84dp"
                    android:background="@drawable/email_ek4_shape" />

                <TextView
                    android:id="@+id/snap_your_skin"
                    android:layout_width="99dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="226dp"
                    android:fontFamily="Nunito Sans"
                    android:gravity="center"
                    android:text="@string/snap_your_skin_string"
                    android:textColor="@color/welcome_to_skinsis__how_is_your_skin_today__color"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/camera_button"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:layout_below="@+id/snap_your_skin"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="6dp"
                    android:backgroundTint="@color/teal_700"
                    android:clickable="true"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/ic_baseline_camera_alt_24"
                    app:iconGravity="textStart"
                    app:iconTint="#FFFFFF" />

                <TextView
                    android:id="@+id/history"
                    android:layout_width="99dp"
                    android:layout_height="29dp"
                    android:layout_alignStart="@+id/historybutton"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="166dp"
                    android:layout_marginTop="226dp"
                    android:fontFamily="Nunito Sans"
                    android:gravity="center"
                    android:text="@string/history_string"
                    android:textColor="@color/welcome_to_skinsis__how_is_your_skin_today__color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/hi_fara__how_is_your_skin_today_"
                    android:layout_width="259.5dp"
                    android:layout_height="48.5dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="Nunito Sans"
                    android:text="@string/hi_fara__how_is_your_skin_today__string"
                    android:textColor="@color/welcome_to_skinsis__how_is_your_skin_today__color"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="297dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="image_3"
                    android:src="@drawable/image_3" />

                <ImageView
                    android:id="@+id/image_4"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignEnd="@+id/image_3"
                    android:layout_marginStart="282dp"
                    android:layout_marginTop="31dp"
                    android:layout_marginEnd="60dp"
                    android:contentDescription="image_4"
                    android:src="@drawable/image_4" />

                <Button
                    android:id="@+id/historybutton"
                    android:layout_width="99dp"
                    android:layout_height="38dp"
                    android:layout_alignTop="@+id/camera_button"
                    android:layout_alignBottom="@+id/camera_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/camera_button"
                    android:backgroundTint="@color/teal_700"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/image_2"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="#FFFFFF" />

            </RelativeLayout>




        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
